k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 34.160.34.26.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 80
